--- a/css/utilidades/cores.css
+++ b/css/utilidades/cores.css
@@ -2,15 +2,16 @@
   --cor-0: #ffffff;
   --cor-1: #f7f7f7;
   --cor-2: #EDEDED;
-  --cor-3: #CCCCCC;
-  --cor-4: #B2B2B2;
-  --cor-5: #9C9C9C;
-  --cor-6: #707070;
-  --cor-7: #595959;
-  --cor-8: #404040;
-  --cor-9: #2E2E2E;
-  --cor-10: #111111;
-  --cor-11: #000000;
+  --cor-3: #DEDEDE;
+  --cor-4: #CCCCCC;
+  --cor-5: #B2B2B2;
+  --cor-6: #9C9C9C;
+  --cor-7: #707070;
+  --cor-8: #595959;
+  --cor-9: #404040;
+  --cor-10: #2E2E2E;
+  --cor-11: #111111;
+  --cor-12: #000000;
   --cor-p1: #ffbb00;
   --cor-p2: #E4A30B;
   --cor-p3: #A66F00;
