--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -3,13 +3,10 @@
   padding: 16px 32px;
   background: linear-gradient(#ffbf00, #f2a50c);
   border-radius: 4px;
-  font-size: 18px;
-  line-height: 1.33;
-  color: #332200;
-  text-transform: uppercase;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-  font-family: "Poppins";
-  font-weight: 600;
+  text-transform: uppercase;
+  color: var(--cor-p5);
+  font: 600 1.125rem/1.33 "Poppins", sans-serif;
 }
 
 .botao:hover {
@@ -19,6 +16,6 @@
 @media (max-width: 600px) {
   .botao {
     padding: 12px 16px;
-    font-size: 16px;
+    font-size: 1rem;
   }
 }
