--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -1,3 +1,11 @@
+.container {
+  box-sizing: border-box;
+  padding: 0 20px;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .botao {
   display: inline-block;
   padding: 16px 32px;
