--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -1,6 +1,7 @@
 .container {
   box-sizing: border-box;
-  padding: 0 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
