--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -1,5 +1,7 @@
 .container {
   box-sizing: border-box;
+  padding-left: 20px;
+  padding-right: 20px;
   padding-top: 20px;
   padding-bottom: 20px;
   max-width: 1200px;
